Update base64 decoder